Fri Oct 18 00:57:07 2013  Tanaka Akira  <akr@fsij.org>

	* lib/tsort.rb (TSort.tsort): Extracted from TSort#tsort.
	  (TSort.tsort_each): Extracted from TSort#tsort_each.
	  (TSort.strongly_connected_components): Extracted from
	  TSort#strongly_connected_components.
	  (TSort.each_strongly_connected_component): Extracted from
	  TSort#each_strongly_connected_component.

Thu Oct 17 18:50:08 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (CALC_EXACT_MALLOC_SIZE_CHECK_OLD_SIZE): introduced.
	  This macro enable checker compare with allocated memory and
	  declared old_size of sized_xfree and sized_xrealloc.

Thu Oct 17 18:45:41 2013  Koichi Sasada  <ko1@atdot.net>

	* string.c (STR_HEAP_SIZE): includes TERM_LEN(str).

	* string.c (rb_str_memsize): use STR_HEAP_SIZE().

Thu Oct 17 17:43:00 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): set ci->me to 0 when the
	  original method of a refined method is undef to avoid SEGV.

	* vm_method.c (rb_method_entry_without_refinements): return 0 when
	  the original method of a refined method is undef to avoid SEGV.

	* test/ruby/test_refinement.rb: related test.

Thu Oct 17 17:38:36 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c, internal.h: rename ruby_xsizefree/realloc to
	  rb_sized_free/realloc.

	* array.c: catch up these changes.

	* string.c: ditto.

Thu Oct 17 17:32:51 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c, string.c: use ruby_xsizedfree() and ruby_xsizedrealloc().

	* internal.h (SIZED_REALLOC_N): define a macro as REALLOC_N().

Thu Oct 17 17:11:17 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (console_emulator_p): check by comparison between
	  module handle of WriteConsoleW and kernel32.dll.

	* configure.in, win32/Makefile.sub, win32/setup.mak: no longer need
	  psapi.lib.

Thu Oct 17 16:53:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c, internal.h: add new internal memory mangement functions.